--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alpha Flight</title>
+    <title></title>
+    <script>
+      function redirect() {
+        var url =
+          "https://www.dnata.com/en/global-network/united-arab-emirates#catering";
+        window.location.replace(url);
+      }
+      window.onload = redirect;
+    </script>
   </head>
   <body>
-    <h1>Alpha Flight</h1>
+    Something went wrong.
   </body>
 </html>
