--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirection Page</title>
-    <meta
+    <!-- <meta
       http-equiv="refresh"
       content="0; url=https://www.dnata.com/en/global-network/united-arab-emirates#catering"
-    />
+    /> -->
   </head>
   <body>
     <p>
