--- a/index.html
+++ b/index.html
@@ -3,19 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redirection Page</title>
-    <!-- <meta
-      http-equiv="refresh"
-      content="0; url=https://www.dnata.com/en/global-network/united-arab-emirates#catering"
-    /> -->
+    <title>Document</title>
   </head>
   <body>
-    <p>
-      Redirecting to the new page. If you are not redirected automatically,
-      <a
-        href="https://www.dnata.com/en/global-network/united-arab-emirates#catering"
-        >click here</a
-      >.
-    </p>
+    hello
   </body>
 </html>
