--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Redirection Page</title>
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://www.dnata.com/en/global-network/united-arab-emirates#catering"
+    />
   </head>
   <body>
-    hello
+    <p>
+      Redirecting to the new page. If you are not redirected automatically,
+      <a
+        href="https://www.dnata.com/en/global-network/united-arab-emirates#catering"
+        >click here</a
+      >.
+    </p>
   </body>
 </html>
